--- a/styles/casestudy_styles.css
+++ b/styles/casestudy_styles.css
@@ -55,7 +55,7 @@ h2 {
   font-family: NPS-Black;
   font-size: 2.5rem;
   color: white;
-  line-height: 1em;
+  line-height: 1.4em;
 }
 
 h3 {
@@ -111,32 +111,30 @@ body {
   margin: auto;
   width: 80vw;
   max-width: 100rem;
+  overflow: hidden;
+}
+
+@media (max-width: 51.6rem) {
+  .page-wrapper {
+    width: 90vw;
+  }
 }
 
 /* end basic classes */
-#logo {
-  font-family: Vanguard;
-  font-size: clamp(2.25em, 4vw, 4em);
-  margin: 2rem;
-  color: red;
+.logo {
+  margin-left: 2rem;
+  width: 19rem;
+  padding: 1rem 0;
 }
 
-/* check for breakpoints */
-@media (min-width: 30rem) {
-  #logo {
-    color: blue;
-  }
+.logo-mobile {
+  display: none;
 }
 
-@media (min-width: 48rem) {
-  #logo {
-    color: green;
-  }
-}
-
-@media (min-width: 64rem) {
-  #logo {
-    color: black;
+@media (max-width: 30rem) {
+  .mobile-nav-toggle {
+    width: 1.5rem;
+    top: 2.5rem;
   }
 }
 
@@ -160,7 +158,21 @@ body {
   margin: 0;
 }
 
-@media (max-width: 48rem) {
+@media (max-width: 51.6rem) {
+  .logo {
+    display: none;
+  }
+  .logo-mobile {
+    display: block;
+    width: 20vw;
+    min-width: 6rem;
+    padding: 1rem 0;
+  }
+  .primary-header {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
   .primary-navigation {
     gap: var(--gap, 3rem);
     position: fixed;
@@ -189,7 +201,7 @@ body {
   .mobile-nav-toggle {
     display: block;
     position: absolute;
-    top: 3.25rem;
+    top: 5vw;
     right: 2rem;
     z-index: 10;
     background-color: transparent;
@@ -205,7 +217,36 @@ body {
   }
 }
 
+@media (max-width: 30rem) {
+  .mobile-nav-toggle {
+    width: 1.5rem;
+    top: 1.75rem;
+  }
+}
+
 /* hero section */
+.hero-section .hero-header {
+  line-height: 2rem;
+}
+
+.hero-section h2 {
+  font-family: Silka-Regular;
+}
+
+.hero-section .hero-slogan {
+  margin-top: 1rem;
+  font-size: 2rem;
+}
+
+@media (max-width: 51.6rem) {
+  .hero-section h2 {
+    font-size: 2rem;
+  }
+  .hero-section .hero-slogan {
+    font-size: 1.4rem;
+  }
+}
+
 @media (min-width: 64rem) {
   .challenge-section {
     display: -webkit-box;
@@ -283,6 +324,13 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.siemensstadtpic {
+  width: 100%;
+  height: 45vw;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .swiper-slide:hover {
@@ -364,6 +412,22 @@ body {
   border: 0px;
 }
 
+.hdpicture {
+  width: 100%;
+}
+
+.qtresults .swiper-slide {
+  width: 80vw;
+  height: 45vw;
+}
+
+.qtresults .swiper-slide .slider-card img {
+  max-width: 100%;
+  max-height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .last-section {
   background-color: white;
   text-align: center;
@@ -384,8 +448,8 @@ body {
 }
 
 .last-section #cta-mail {
-  -webkit-text-stroke: #262626 0.5px;
-  font-family: NPS-Regular;
+  color: #151515;
+  font-family: Silka-Regular;
   font-size: 90px;
   padding: 5rem;
 }
@@ -410,7 +474,7 @@ body {
 }
 
 .last-section #cta-text {
-  font-size: 4rem;
+  font-size: clamp(3rem, 7vw, 8rem);
 }
 
 .last-section #cta-mail {
@@ -418,17 +482,25 @@ body {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  font-size: clamp(2em, 4vw, 4em);
-  border: 1px solid;
+  font-size: clamp(1.25rem, 3vw, 4rem);
   padding: 0;
 }
 
 .last-section img {
-  margin-top: 2.5rem;
+  padding-top: 2rem;
 }
 
 .last-section .footer-font {
   font-size: 1rem;
   padding: 1rem;
+}
+
+.datenschutz-section a {
+  color: white;
+}
+
+.datenschutz-section li {
+  color: white;
+  font-family: Silka-Regular;
 }
 /*# sourceMappingURL=casestudy_styles.css.map */
