--- a/styles/casestudy_styles.css
+++ b/styles/casestudy_styles.css
@@ -311,6 +311,7 @@ img {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+  max-width: 100rem;
 }
 
 .swiper .swiper-pagination-bullet-active {
@@ -439,7 +440,8 @@ img {
 
 @media (min-width: 51.6rem) {
   .qtresults .swiper-slide {
-    width: 50vw;
+    height: 25rem;
+    width: 50rem;
   }
 }
 
