--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -278,6 +278,7 @@ hr {
     margin-top: 10em;
     margin-bottom: 10em;
     max-width: 90ch;
+    text-align: center;
     p{
         font-size: 2em;
     }
@@ -322,6 +323,9 @@ hr {
         position: -webkit-sticky; /* Safari */
     }
     .right-side {
+        img {
+            padding-right: 3rem;
+        }
         .content-area {
             border: 1px solid white;
             border-right: 0px;
@@ -386,6 +390,7 @@ hr {
                 padding:0!important;
             }
             img {
+                width:6rem;
                 margin-top: 3rem;
             }
         }
@@ -662,7 +667,6 @@ hr {
         background-color: #404040;
         padding: 2rem 0;
         th {
-
             padding: 1rem 4rem;
             font-family: NPS-Medium;
         }
@@ -672,6 +676,7 @@ hr {
         }
         .highlighted {
             font-family: NPS-Bold;
+            font-size: 20px;
         }
     }
 
@@ -691,6 +696,19 @@ hr {
             font-family: Silka-Regular;
             font-size: 14.5px;
             padding-bottom: 2rem;
+        }
+    }
+}
+
+@media (max-width: 75rem) {
+    .pricing-section {
+        table {
+            th {
+                padding: 1rem 2rem;
+            }
+            td {
+                padding: 1rem 2rem;
+            }
         }
     }
 }
